<resources>
    <string name="app_name">RxDemo</string>
    <string name="normal_rx">正常的Rx流程</string>
    <string name="content_normal">床前明月光\n疑是地上霜\n举头望明月\n低头思故乡\n</string>
    <string name="filter_rx">操作符Filter</string>
    <string name="content_filter">输出1-100中能被3整除的数</string>
    <string name="map_rx">操作符——MAP</string>
    <string name="content_map">判断一组随机的数组中小于5的数</string>
    <string name="schulder_rx">线程调度</string>
    <string name="content_schulder">从资源文件中加载图片</string>
    <string name="flatMap_rx">操作符——FlatMap</string>
    <string name="content_flat_map">打印一个学校所有班级所有学生姓名</string>
    <string name="merge_rx">操作符——合并</string>
    <string name="content_merge">两个任务并发进行，全部处理之后在更新数据</string>
    <string name="interval_rx">操作符——interval,取消订阅</string>
    <string name="tosortedlist_rx">操作符——tosortedlist</string>
    <string name="connect_rx">操作符——connect</string>
    <string name="timestamp_rx">操作符——添加时间戳</string>
    <string name="content_timer">定时器，每一秒发送打印一个数字 \n\ninterval(1, TimeUnit.SECONDS) 创建一个每隔一秒发送一次事件的对象</string>
    <string name="content_connect">Observable发送事件1-6，两个观察者同时观察这个Observable 要求：每发出一个事件，观察者A和观察者都会收到，而不是先把所有的时间发送A,然后再发送给B</string>
    <string name="content_sort">排序1，3，5，2，24，7，5，86，23，43</string>
    <string name="content_timeStamp">给1, 3, 5, 2, 24, 7, 5, 86, 23, 43添加时间戳</string>

</resources>
