<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.demo.study.rxdemo.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/normal_rx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/normal_rx"
            />

        <Button
            android:id="@+id/filter_rx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_rx"
            />

        <Button
            android:id="@+id/map_rx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_rx"
            />

        <Button
            android:id="@+id/schulder_rx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/schulder_rx"
            />

        <Button
            android:id="@+id/flatMap_rx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flatMap_rx"
            />

        <Button
            android:id="@+id/merge_rx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/merge_rx"
            />
        <Button
            android:id="@+id/interval_rx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/interval_rx"
            />
        <Button
            android:id="@+id/tosortedlist_rx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tosortedlist_rx"
            />
        <Button
            android:id="@+id/connect_rx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect_rx"
            />
        <Button
            android:id="@+id/add_timestamp_rx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timestamp_rx"
            />
    </LinearLayout>
</RelativeLayout>
